web-infras/parser/tests/fixtures/babel/es2015/yield/parameter-default-inside-arrow-inside-generator-6/output.txt
[SyntaxError]: yield expression can not used in parameter list (2,9)
2|  (x = (yield)) => {};
 |       ^
